fixed blurred image

--- a/src/app/card-component/card-component.component.scss
+++ b/src/app/card-component/card-component.component.scss
@@ -22,7 +22,7 @@
 
 .cardImage {
   box-sizing: border-box;
-  width: 100px;
+  width: 90px;
   border-radius: 50% !important;
   display: block;
   margin: auto;
